--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 :root {
     --header-blue: #0044ff;
-    --button-blue: #4576d1;
+    --button-blue: #4072cf;
     --button-gray: #7c8491;
     --card-blue: #313d64;
 }
@@ -56,6 +56,7 @@ aside {
 
 #selected-city {
     display: flex;
+    flex-direction: column;
     padding-right: 4%;
     padding-top: 2%;
     padding-bottom: 2%;
